--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@ignite-ui/ts-config": "*",
-    "@iginte-ui/eslint-config": "*",
+    "@ignite-ui/eslint-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
