--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
